tests/scan/fixtures/validation/negative/clean_npm_with_internal_scope_private_registry/.npmrc
registry=https://npm.pkg.internal.example.com/
@internal:registry=https://npm.pkg.internal.example.com/
